2012-02-19  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-init): Don't multiply time twice.
	Reported by Peter Münster.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-log-command): Add the IMAP address to the log
	buffer.  Suggested by Herbert Valerio Riedel.
	(nnimap-request-move-article): Delete the message from the correct IMAP
	server.

2012-02-19  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-init): Don't multiply time twice.
	Reported by Peter Münster.

2012-02-18  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-image-fetched): Make sure we really kill the right
	buffer.

2012-02-16  Leo Liu  <sdl.web@gmail.com>

	* gnus-start.el (gnus-1): Avoid duplicate entries.

2012-02-16  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-singlepart): Guess what the type of
	application/octet-stream parts really is.

	* gnus-sum.el (gnus-propagate-marks): Remove.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* imap.el: Remove.

	* nntp.el (nntp-coding-system-for-read): Remove.
	(nntp-coding-system-for-write): Ditto.
	(nntp-open-connection): Just use `binary' directly.

	* gnus-start.el (gnus-clean-old-newsrc): Delete `unexist' from pre-Ma
	Gnus 0.3.

2012-02-15  Paul Eggert  <eggert@cs.ucla.edu>

	* shr.el (shr-rescale-image): Undo previous change; see
	<http://lists.gnu.org/archive/html/emacs-devel/2012-02/msg00540.html>.

2012-02-15  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.3 is released.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-local-variables): Make
	`gnus-newsgroup-unexist' into a local variable.

2012-02-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-usage-test, registry-persistence-test): Move to
	tests/gnustest-registry.el.
	(registry-make-testable-db, registry-match-test)
	(registry-instantiation-test): Move to tests/gnustest-registry.el.
